# splitzip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/splitzip/: __init__.py  __main__.py  exceptions.py  structures.py  utils.py  volume.py  writer.py
tests/: __init__.py  test_cli.py  test_structures.py  test_utils.py  test_volume_boundary.py  test_writer.py
