[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splitzip"
version = "0.2.0"
description = "Create split ZIP archives compatible with standard tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "splitzip contributors" }
]
keywords = ["zip", "archive", "split", "multipart", "compression", "7z"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/twwat/splitzip"
Repository = "https://github.com/twwat/splitzip"
Issues = "https://github.com/twwat/splitzip/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
splitzip = "splitzip.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/splitzip"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
